--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 domain = {path="domain"}
+static_data = {path="static_data"}
 
 [workspace]
-members = ["domain", "macros"]
+members = ["domain", "macros", "static_data"]
