--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,3 +8,13 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
+reqwest  = "0.11"
+tokio = {version = "1.2", features = ["rt-multi-thread"]}
+syn = "1.0.6"
+quote = "1.0"
+proc-macro-hack = "0.5.19"
+zip = "0.5.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
+
+domain = { path = "../domain" }
