--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,5 +16,6 @@ proc-macro-hack = "0.5.19"
 zip = "0.5.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+proc-macro2 = "1.0.24"
 
 domain = { path = "../domain" }
