refactored domain to fitting_engine

--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "domain"
+name = "fitting_engine"
 version = "0.1.0"
 authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>"]
 edition = "2018"
