--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-domain = {path="domain"}
+fitting_engine = {path= "fitting_engine" }
 static_data = {path="static_data"}
 
 [workspace]
-members = ["domain", "macros", "static_data"]
+members = ["fitting_engine", "macros", "static_data"]
