--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -18,4 +18,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 proc-macro2 = "1.0.24"
 
-domain = { path = "../domain" }
+fitting_engine = { path = "../fitting_engine" }
