--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -8,13 +8,12 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-reqwest  = "0.11"
 tokio = {version = "1.2", features = ["rt-multi-thread"]}
 syn = "1.0.6"
 quote = "1.0"
 proc-macro-hack = "0.5.19"
-zip = "0.5.10"
 proc-macro2 = "1.0.24"
 
 fitting_engine = { path = "../fitting_engine" }
 sde_parser = {path = "../sde_parser"}
+sde_provider = {path = "../sde_provider"}
