--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,6 +13,8 @@ syn = "1.0.6"
 quote = "1.0"
 proc-macro-hack = "0.5.19"
 proc-macro2 = "1.0.24"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.62"
 
 fitting_engine = { path = "../fitting_engine" }
 sde_parser = {path = "../sde_parser"}
