--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 num-traits = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+fitting_engine_macros = { path = "../fitting_engine_macros" }
