--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -11,3 +11,4 @@ num-traits = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 fitting_engine_macros = { path = "../fitting_engine_macros" }
 once_cell = "1.5.2"
+approx = "0.4.0"
