--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+ts = ["ts-rs"]
 
 [dependencies]
 num-traits = "0.2"
@@ -12,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 fitting_engine_macros = { path = "../fitting_engine_macros" }
 once_cell = "1.5.2"
 approx = "0.4.0"
+ts-rs = {git = "https://github.com/cramt/ts-rs.git", branch = "main", optional = true}
