--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.0.1",
+    "comlink-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "text-encoding": "^0.7.0",
     "ts-loader": "^8.0.17",
