--- a/web/wasm_export/Cargo.toml
+++ b/web/wasm_export/Cargo.toml
@@ -14,3 +14,4 @@ static_data = { path = "../../static_data" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 once_cell = "1.7.2"
+js-sys = "0.3.48"
