--- a/web/package.json
+++ b/web/package.json
@@ -6,12 +6,14 @@
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.0.1",
     "comlink-loader": "^2.0.0",
+    "cpy": "^8.1.2",
     "html-webpack-plugin": "^3.2.0",
     "text-encoding": "^0.7.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-shell-plugin-next": "1.2.0"
   }
 }
