made all cargo toml include all contributers

--- a/fitting_engine_macros/Cargo.toml
+++ b/fitting_engine_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fitting_engine_macros"
 version = "0.1.0"
-authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
+authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
 edition = "2018"
 
 [lib]
