--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fitting_engine"
 version = "0.1.0"
-authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>"]
+authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
 edition = "2018"
 
 [features]
