--- a/fitting_engine_ts_gen/Cargo.toml
+++ b/fitting_engine_ts_gen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fitting_engine_ts_gen"
 version = "0.1.0"
-authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
+authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
