--- a/web/wasm_export/Cargo.toml
+++ b/web/wasm_export/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasm_export"
 version = "0.1.0"
-authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
+authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
 edition = "2018"
 
 [lib]
