--- a/sde_parser/Cargo.toml
+++ b/sde_parser/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+serde_json = "1.0.64"
 fitting_engine = { path = "../fitting_engine" }
 
