--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -9,7 +9,7 @@ default = []
 ts = ["ts-rs"]
 
 [dependencies]
-num-traits = "0.2"
+funty = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 fitting_engine_macros = { path = "../fitting_engine_macros" }
 once_cell = "1.5.2"
