--- a/fitting_engine/Cargo.toml
+++ b/fitting_engine/Cargo.toml
@@ -15,5 +15,4 @@ fitting_engine_macros = { path = "../fitting_engine_macros" }
 once_cell = "1.5.2"
 approx = "0.4.0"
 ts-rs = { git = "https://github.com/cramt/ts-rs.git", branch = "main", optional = true }
-assertable = { git = "https://github.com/cramt/assertable.git", branch = "main"}
-
+shoulda = { git = "https://github.com/cramt/shoulda.git", branch = "main"}
